@@ -1,3 +1,10 @@
+2011-06-20 Charles Suprin <hamaa1vs at gmail.com>
+
+    * src/gtk-sat-map.c
+    * src/gtk-polar-view.c
+    Change naos logic to avoid a daynum 2458849.5 (Y2021?) problem.
+
+
 2011-06-19 Charles Suprin <hamaa1vs at gmail.com>
 
     * src/gtk-sat-map.c
